--- a/charts/commons/templates/cronjob.yaml
+++ b/charts/commons/templates/cronjob.yaml
@@ -88,6 +88,7 @@ spec:
             {{- end }}
           {{- end }}
           containers:
+            {{- range $components.containers }}
             - name: {{ default $component.name .name }}
               image: {{ .image.repository }}:{{ .image.tag | default "latest" }}
               {{- with .command }}
@@ -98,11 +99,9 @@ spec:
               args:
                 {{ toYaml . | nindent 16 }}
               {{- end }}
-              {{- if .container }}
-              {{- with .container.securityContext }}
+              {{- with .securityContext }}
               securityContext:
                 {{- toYaml . | nindent 16 }}
-              {{- end }}
               {{- end }}
               env:
                 - name: TZ
@@ -143,7 +142,7 @@ spec:
               resources:
                 {{- toYaml . | nindent 16 }}
               {{- end }}
-            {{ include "containers.sidecars" (dict "component" $component "Values" $.Values) | nindent 8 }}
+            {{- end }}
           {{- with .volumes }}
           volumes:
             {{- range . }}
