--- a/charts/commons/templates/deployment.yaml
+++ b/charts/commons/templates/deployment.yaml
@@ -69,8 +69,9 @@ spec:
           {{- end }}
         {{- end }}
       {{- end }}
+      {{- with .containers }}
       containers:
-        {{- range $component.containers }}
+        {{- range . }}
         - name: {{ default $component.name .name }}
           image: {{ .image.repository }}:{{ .image.tag | default "latest" }}
           {{- with .command }}
@@ -131,6 +132,7 @@ spec:
              {{- toYaml . | nindent 12 }}
           {{- end }}
         {{- end }}
+      {{- end }}
       {{- with .volumes }}
       volumes:
         {{- range . }}
