update fix nodeselector

--- a/charts/commons/templates/cronjob.yaml
+++ b/charts/commons/templates/cronjob.yaml
@@ -30,7 +30,7 @@ spec:
           {{- end }}
 
           {{ include "containers.securityContext" (dict "global" $.Values.global "securityContext" .securityContext) | nindent 10 }}
-          {{- with nodeSelector }}
+          {{- with .nodeSelector }}
           nodeSelector: {{ . }}
           {{- end }}
           {{- with .initContainers }}
