--- a/charts/commons/templates/cronjob.yaml
+++ b/charts/commons/templates/cronjob.yaml
@@ -31,7 +31,8 @@ spec:
 
           {{ include "containers.securityContext" (dict "global" $.Values.global "securityContext" .securityContext) | nindent 10 }}
           {{- with .nodeSelector }}
-          nodeSelector: {{ . }}
+          nodeSelector: 
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- with .initContainers }}
           initContainers:
