--- a/charts/commons/tests/values/values.yaml
+++ b/charts/commons/tests/values/values.yaml
@@ -56,10 +56,24 @@ global:
           - get
           - list
 components:
+  - name: cron
+    cronjobs:
+      - schedule: '0 3 * * *'
+        successfulJobsHistoryLimit: 3
+        failedJobsHistoryLimit: 1
+        containers:
+          - env:
+            - name: ENV
+              value: prod
+            image:
+              repository: nginx
+              tag: latest
+
   - name: nginx
     cronjobs:
       - schedule: '0 3 * * *'
         successfulJobsHistoryLimit: 3
+        runOnStartup: true
         failedJobsHistoryLimit: 1
         containers:
           - env:
