--- a/charts/commons/templates/job.yaml
+++ b/charts/commons/templates/job.yaml
@@ -33,6 +33,25 @@ spec:
           securityContext:
             {{- toYaml . | nindent 16 }}
           {{- end }}
+          env:
+            - name: TZ
+              value: {{ $.Values.global.timezone | quote }}
+            {{- range .env }}
+            - name: {{ .name }}
+              {{- with .value }}
+              value: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .) | quote }}
+              {{- end }}
+              {{- with .valueFrom }}
+              valueFrom:
+                {{- if .secretKeyRef }}
+                secretKeyRef:
+                  name: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .secretKeyRef.name) }}
+                  key: {{ .secretKeyRef.key }}
+                {{- else }}
+                {{- toYaml . | nindent 20 }}
+                {{- end }}
+              {{- end }}
+            {{- end }}
           {{- with .lifecycle }}
           lifecycle:
           {{- toYaml . | nindent 16 }}
@@ -52,6 +71,36 @@ spec:
           {{- with .resources }}
           resources:
             {{- toYaml . | nindent 16 }}
+          {{- end }}
+        {{- end }}
+      {{- end }}
+      {{- with .volumes }}
+      volumes:
+        {{- range . }}
+        {{- if .configMap }}
+        - name: {{ .name }}
+          configMap:
+            {{- if .configMap.useExisting }}
+            name: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .configMap.name) }}
+            {{- else }}
+            name: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default .name .configMap.name) "component" $component) }}
+            {{- end }}
+            {{- with .configMap.readOnly }}
+            readOnly: {{ . }}
+            {{- end }}
+        {{- else if .pvc }}
+        - name: {{ .name }}
+          persistentVolumeClaim:
+            {{- if .pvc.useExisting }}
+            claimName: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .pvc.name) }}
+            {{- else }}
+            claimName: {{ include "commons.fullname" (dict "Chart" $.Chart "Values" $.Values "Release" $.Release "name" (default .name .pvc.name) "component" $component) }}
+            {{- end }}
+            {{- with .pvc.readOnly }}
+            readOnly: {{ . }}
+            {{- end }}
+        {{- else }}
+        - {{ toYaml . | nindent 14 | trim }}
           {{- end }}
         {{- end }}
       {{- end }}
