--- a/charts/commons/templates/job.yaml
+++ b/charts/commons/templates/job.yaml
@@ -16,6 +16,62 @@ spec:
       nodeSelector: 
         {{- toYaml . | nindent 12 }}
       {{- end }}
+      {{- with .initContainers }}
+      initContainers:
+        {{- range . }}
+        - name: {{ .name | default $component.name }}
+          {{- if .container }}
+          {{- with .container.securityContext }}
+          securityContext:
+            {{- toYaml . | nindent 16 }}
+          {{- end }}
+          {{- with .container.capabilities }}
+          capabilities:
+            {{- toYaml . | nindent 16 }}
+          {{- end }}
+          {{- end }}
+          image: {{ .image.repository }}:{{ .image.tag | default "latest"  }}
+          {{- with .command }}
+          command:
+            {{ toYaml . | nindent 16 }}
+          {{- end }}
+          {{- with .args }}
+          args:
+            {{ toYaml . | nindent 16 }}
+          {{- end }}
+          {{- with .env }}
+          env:
+            - name: TZ
+              value: {{ $.Values.global.timezone | quote }}
+            {{- range . }}
+            - name: {{ .name }}
+              {{- with .value }}
+              value: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .) | quote }}
+              {{- end }}
+              {{- with .valueFrom }}
+              valueFrom:
+                {{- if .secretKeyRef }}
+                secretKeyRef:
+                  name: {{ include "commons.getValue" (dict "Values" $.Values "Chart" $.Chart "Release" $.Release "component" $component "value" .secretKeyRef.name) }}
+                  key: {{ .secretKeyRef.key }}
+                {{- else }}
+                {{- toYaml . | nindent 20 }}
+                {{- end }}
+              {{- end }}
+            {{- end }}
+          {{- end }}
+          {{- with .volumeMounts }}
+          volumeMounts:
+            {{- range . }}
+            - name: {{ .name }}
+              mountPath: {{ .mountPath }}
+              {{- with .subPath }}
+              subPath: {{ . }}
+              {{- end }}
+            {{- end }}
+          {{- end }}
+        {{- end }}
+      {{- end }}
       {{- with .containers }}
       containers:
         {{- range . }}
