--- a/charts/commons/templates/job.yaml
+++ b/charts/commons/templates/job.yaml
@@ -11,8 +11,11 @@ spec:
   template:
     spec:
       restartPolicy: {{ default "Never" .restartPolicy }}
+      {{- if $.Values.global.rbac.enabled }}
+      serviceAccountName: {{ $.Values.global.rbac.serviceAccountName }}
+      automountServiceAccountToken: true
+      {{- end }}
 
-      {{ include "containers.securityContext" (dict "global" $.Values.global "securityContext" .securityContext) | nindent 10 }}
       {{- with .nodeSelector }}
       nodeSelector: 
         {{- toYaml . | nindent 12 }}
