--- a/charts/commons/tests/deployments_test.yaml
+++ b/charts/commons/tests/deployments_test.yaml
@@ -110,7 +110,7 @@ tests:
           value: 0
       - equal:
           path: spec.template.spec.containers[0].env[2].value
-          value: 0
+          value: "0"
       - equal:
           path: spec.template.spec.containers[0].image
           value: lscr.io/linuxserver/code-server:4.104.2
